# itfest2025

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.cursor/: ngrokcommands.mdc
.cursor/rules/: forhahaton.mdc
backend/: Dockerfile  alembic.ini  docker-compose.yml  env.example
backend/alembic/: env.py
backend/alembic/versions/: 20241205_add_whatsapp_source.py  20241205_helpdesk_tables.py  8402130f6587_migrations.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routes/: auth.py  chat.py  tickets.py
backend/app/core/: config.py  redis.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  ticket.py  user.py
backend/app/schemas/: __init__.py  auth.py  ticket.py  user.py
backend/app/services/: auth.py  escalation_store.py  redis.py  ticket_service.py
backend/app/services/AI/: __init__.py  ai_service.py  rag_service.py
backend/app/services/integrations/: __init__.py  email_service.py  twilio_whatsapp.py  whatsapp.py
backend/docs/: workflows.md
backend/tests/: test_security.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: ChatWidget.tsx  ParticleBackground.tsx  ThemeToggle.tsx
frontend/src/contexts/: theme.ts
frontend/src/pages/: DashboardPage.tsx  DepartmentsPage.tsx  LandingPage.tsx  NotFoundPage.tsx  OperatorPage.tsx  RegisterPage.tsx  SubmitTicketPage.tsx  TicketViewPage.tsx  TicketsListPage.tsx
frontend/src/providers/: ThemeProvider.tsx
(+5 files in other folders)
